# ECE472---Deep-Learning

./: justfile
hw01/: README.md  pyproject.toml
hw01/src/hw01/: __init__.py  config.py  config.toml  data.py  model.py  plotting.py  training.py
hw02/: README.md  pyproject.toml
hw02/src/hw02/: __init__.py  config.py  config.toml  data.py  model.py  plotting.py  training.py
hw03/: README.md  pyproject.toml
hw03/src/hw03/: __init__.py  config.py  config.toml  data.py  logging.py  model1.py  training.py
hw04/: README.md  pyproject.toml
hw04/src/hw04/: __init__.py  config.py  config.toml  data.py  logging.py  model1.py  training.py
hw05/: README.md  pyproject.toml
hw05/src/hw05/: __init__.py  config.py  config.toml  data.py  logging.py  model1.py  training.py
hw06/: README.md  pyproject.toml
hw06/src/hw06/: __init__.py  config.py  config.toml  logging.py  model.py  test_trans.py
hw07/: README.md  pyproject.toml
hw07/src/hw07/: __init__.py  config.py  config.toml  data.py  logging.py  model.py  plotting.py  training.py
