# pyproject.toml.jinja

[project]
name = "hw06"
version = "0.1.0"
description = "ECE472 - Assignment 6 - Transformer"
readme = "README.md"
authors = [
    { name = "Paddy Yang", email = "paddy.yang@cooper.edu" }
]
requires-python = ">=3.13"

dependencies = [
    "structlog",
    "numpy",
    "pydantic-settings>=2.10.1",
    "matplotlib>=3.10.5",
    "tqdm>=4.67.1",
    "jax[cpu]>=0.7.1",
    "flax>=0.11.2",
    "optax>=0.2.4",
]


[project.scripts]
hw06 = "hw06:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.package-data]
"hw06" = ["config.toml"]
